--- a/src/main/resources/com/main/datenpunk/newProject-view.fxml
+++ b/src/main/resources/com/main/datenpunk/newProject-view.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.NewProjectController">
+<BorderPane fx:id="mainPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.datenpunk.NewProjectController">
    <center>
       <ScrollPane focusTraversable="false" hbarPolicy="NEVER">
          <content>
@@ -41,6 +41,11 @@
                                           <Label text="Name:" />
                                           <TextField disable="true" editable="false" text="id" />
                                           <CheckBox disable="true" mnemonicParsing="false" text="Track History">
+                                             <VBox.margin>
+                                                <Insets top="5.0" />
+                                             </VBox.margin>
+                                          </CheckBox>
+                                          <CheckBox disable="true" mnemonicParsing="false" selected="true" text="Required">
                                              <VBox.margin>
                                                 <Insets top="5.0" />
                                              </VBox.margin>
@@ -105,6 +110,11 @@
                                                 <Insets top="5.0" />
                                              </VBox.margin>
                                           </CheckBox>
+                                          <CheckBox mnemonicParsing="false" selected="true" text="Required">
+                                             <VBox.margin>
+                                                <Insets top="5.0" />
+                                             </VBox.margin>
+                                          </CheckBox>
                                        </children>
                                        <HBox.margin>
                                           <Insets bottom="5.0" right="10.0" />
@@ -160,6 +170,11 @@
                                           <Label text="Name:" />
                                           <TextField disable="true" editable="false" text="Status" />
                                           <CheckBox mnemonicParsing="false" selected="true" text="Track History">
+                                             <VBox.margin>
+                                                <Insets top="5.0" />
+                                             </VBox.margin>
+                                          </CheckBox>
+                                          <CheckBox mnemonicParsing="false" selected="true" text="Required">
                                              <VBox.margin>
                                                 <Insets top="5.0" />
                                              </VBox.margin>
@@ -248,6 +263,11 @@
                                           <Label text="Name:" />
                                           <TextField disable="true" editable="false" text="Date" />
                                           <CheckBox disable="true" mnemonicParsing="false" selected="true" text="Track History">
+                                             <VBox.margin>
+                                                <Insets top="5.0" />
+                                             </VBox.margin>
+                                          </CheckBox>
+                                          <CheckBox disable="true" mnemonicParsing="false" selected="true" text="Required">
                                              <VBox.margin>
                                                 <Insets top="5.0" />
                                              </VBox.margin>
@@ -349,7 +369,7 @@
    <bottom>
       <BorderPane BorderPane.alignment="CENTER">
          <right>
-            <Button mnemonicParsing="false" onAction="#onCreate" text="Create" BorderPane.alignment="CENTER" />
+            <Button fx:id="createButton" mnemonicParsing="false" onAction="#onCreate" text="Create" BorderPane.alignment="CENTER" />
          </right>
          <left>
             <Button mnemonicParsing="false" onAction="#onCancel" text="Back" BorderPane.alignment="CENTER" />
