--- a/src/main/resources/com/main/datenpunk/application.css
+++ b/src/main/resources/com/main/datenpunk/application.css
@@ -7,3 +7,10 @@
 .split-pane-divider {
   -fx-padding: .5;
 }
+
+.list-cell:filled:selected:focused,
+.list-cell:filled:selected
+{
+  -fx-background-color: #0096c9;
+  -fx-text-fill: white;
+}
